# LBTCode

./: AGENTS.md  CLAUDE.md  DEV-LOG.md  README.md  README_EN.md  biome.json  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
desktop/: index.html  tailwind.config.js  tsconfig.json  vite.config.ts
desktop/src/: App.tsx
dist-backend/: lbtcode-api
dist-desktop/: index.html
dist-desktop/assets/: index-BYfswRAn.js  index-D3goOx7e.css
docs/: acp-compliance-audit.md  auto-updater.md  external-dependencies.md  ink-tui-deep-audit.md  lsp-integration.md
docs/design/: tool-search-design-guide.md
docs/features/: acp-link.md  all-features-guide.md  auto-dream.md  autofix-pr.md  channels.md  chrome-use-mcp.md  claude-in-chrome-mcp.md  computer-use-mcp-test-report.md  computer-use-tools-reference.md  daemon.md  growthbook-enablement-plan.md  kairos.md  lan-pipes.md  pipes-and-lan.md  remote-control-self-hosting.md  ssh-remote.md  uds-inbox.md  workflow-scripts.md
docs/internals/: session-transcript-persistence.md
docs/task/: task-014-daemon-command-hierarchy.md
scripts/: dump-prompt.ts  generate-icons.sh
spec/feature_20260508_F001_tool-search/: spec-design.md  (+2 more)
src/: QueryEngine.ts  Task.ts  Tool.ts  commands.ts  context.ts  cost-tracker.ts  costHook.ts  dialogLaunchers.tsx  history.ts  interactiveHelpers.tsx  main.tsx  projectOnboardingState.ts  query.ts  replLauncher.tsx  setup.ts  tools.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+1844 files in other folders)
